# kafkafastapi

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
