[tool.poetry]
name = "kafkafastapi"
version = "1"
description = "Kafka con fast api"
authors = ["Neals"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
aiokafka = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
